# CProject

./: CMakeLists.txt  config.json  functions.h  main.c
